--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
         grand += lt;
       });
       text += `\nTotal: ${grand} Birr`;
-      alert(text + "\n\n(Contact seller for delivery in Waliso!)");
+      alert(text + "\n\n(Contact seller for delivery in Addis Ababa!)");
       setTimeout(() => {
         alert("Order placed! Thank you! 💧");
         cart = [];
