--- a/index.html
+++ b/index.html
@@ -239,14 +239,16 @@
 </head>
 <body>
   <header>
-    <h1>ET Water shop(+350 Agents)</h1>
+    <h1>ET Water/+350 Agents/
+      <div class="moto">"To your need"</div>
+    </h1>
   </header>
 
   <div class="search-bar">
     <input 
       type="text" 
       id="searchInput" 
-      placeholder="Search by brand or price (140, 150, 160)..." 
+      placeholder="Search by brand or price " 
     >
   </div>
 
