--- a/index.html
+++ b/index.html
@@ -239,8 +239,8 @@
 </head>
 <body>
   <header>
-    <h1>ET Water/+350 Agents/
-      <div class="moto">"To your need"</div>
+    <h1>ET Water Market(+350 Agents)
+      <div class="moto">To your need</div>
     </h1>
   </header>
 
