--- a/index.html
+++ b/index.html
@@ -239,7 +239,8 @@
 </head>
 <body>
   <header>
-    <h1>ET Water Market(+350 Agents)
+    <h1>ET Water Market
+      (+350 Agents)
       <div class="moto">To your need</div>
     </h1>
   </header>
@@ -265,9 +266,10 @@
     <div class="category-tile" onclick="showBrand('dega')"><img src="https://i.postimg.cc/9FG86vz9/dega.webp" alt="Dega"><span>Dega Water</span></div>
     <div class="category-tile" onclick="showBrand('fham')"><img src="https://i.postimg.cc/wjqVSMCp/fham.jpg" alt="Fham"><span>Fham Water</span></div>
     <div class="category-tile" onclick="showBrand('arki')"><img src="https://i.postimg.cc/TwDqrDDf/arki.webp" alt="Arki"><span>Arki Water</span></div>
+    <div class="category-tile" onclick="showBrand('care')"><img src="https://i.postimg.cc/TwDqrDDf/arki.webp" alt="Care"><span>Care Water</span></div>
   </div>
 
-  <div id="no-results">No brands found matching your search 💧</div>
+  <div id="no-results">No brands found matching your search </div>
 
   <!-- Brand sections -->
   <div id="aquaddis-section" class="brand-section">
@@ -447,6 +449,23 @@
   </div>
 
   <div id="arki-section" class="brand-section">
+    <div class="brand-header">Arki Water</div>
+    <div class="variant"><div class="variant-info"><div class="variant-size">0.3 L/pack</div><div class="variant-price">140 Birr</div></div><button class="add-btn" onclick="addToCart('Arki Water', '0.3L', 140)">+</button></div>
+    <div class="variant"><div class="variant-info"><div class="variant-size">0.6 L/pack</div><div class="variant-price">150 Birr</div></div><button class="add-btn" onclick="addToCart('Arki Water', '0.6L', 150)">+</button></div>
+    <div class="variant"><div class="variant-info"><div class="variant-size">2 L/pack</div><div class="variant-price">160 Birr</div></div><button class="add-btn" onclick="addToCart('Arki Water', '2L', 160)">+</button></div>
+    <div class="nutrition">
+      <h3>Nutrition Facts (per liter)</h3>
+      <table class="nutrition-table">
+        <tr><td>Calcium</td><td>0.4 mg/L</td></tr>
+        <tr><td>Magnesium</td><td>1.3 mg/L</td></tr>
+        <tr><td>Sodium</td><td>2.3 mg/L</td></tr>
+        <tr><td>TDS</td><td>20 mg/L</td></tr>
+      </table>
+    </div>
+  </div>
+
+  </div>
+   <div id="Care-section" class="brand-section">
     <div class="brand-header">Arki Water</div>
     <div class="variant"><div class="variant-info"><div class="variant-size">0.3 L/pack</div><div class="variant-price">140 Birr</div></div><button class="add-btn" onclick="addToCart('Arki Water', '0.3L', 140)">+</button></div>
     <div class="variant"><div class="variant-info"><div class="variant-size">0.6 L/pack</div><div class="variant-price">150 Birr</div></div><button class="add-btn" onclick="addToCart('Arki Water', '0.6L', 150)">+</button></div>
