--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
   </div>
 
   </div>
-   <div id="Care-section" class="brand-section">
+    <div id="care-section" class="brand-section">
     <div class="brand-header">Arki Water</div>
     <div class="variant"><div class="variant-info"><div class="variant-size">0.3 L/pack</div><div class="variant-price">140 Birr</div></div><button class="add-btn" onclick="addToCart('Arki Water', '0.3L', 140)">+</button></div>
     <div class="variant"><div class="variant-info"><div class="variant-size">0.6 L/pack</div><div class="variant-price">150 Birr</div></div><button class="add-btn" onclick="addToCart('Arki Water', '0.6L', 150)">+</button></div>
