--- a/index.html
+++ b/index.html
@@ -266,7 +266,10 @@
     <div class="category-tile" onclick="showBrand('dega')"><img src="https://i.postimg.cc/9FG86vz9/dega.webp" alt="Dega"><span>Dega Water</span></div>
     <div class="category-tile" onclick="showBrand('fham')"><img src="https://i.postimg.cc/wjqVSMCp/fham.jpg" alt="Fham"><span>Fham Water</span></div>
     <div class="category-tile" onclick="showBrand('arki')"><img src="https://i.postimg.cc/TwDqrDDf/arki.webp" alt="Arki"><span>Arki Water</span></div>
-    <div class="category-tile" onclick="showBrand('care')"><img src="https://i.postimg.cc/TwDqrDDf/arki.webp" alt="Care"><span>Care Water</span></div>
+    <div class="category-tile" onclick="showBrand('care')"><img src="https://i.postimg.cc/15NtYv7K/care.webp" alt="Care"><span>Care Water</span></div>
+    <div class="category-tile" onclick="showBrand('wow')"><img src="https://i.postimg.cc/15NtYv7K/care.webp" alt="Wow"><span>Wow Water</span></div>
+    <div class="category-tile" onclick="showBrand('konjo')"><img src="https://i.postimg.cc/15NtYv7K/care.webp" alt="Konjo"><span>Konjo Water</span></div>
+    <div class="category-tile" onclick="showBrand('eden')"><img src="https://i.postimg.cc/15NtYv7K/care.webp" alt="Eden"><span>Eden Water</span></div>
   </div>
 
   <div id="no-results">No brands found matching your search </div>
@@ -466,7 +469,7 @@
 
   </div>
     <div id="care-section" class="brand-section">
-    <div class="brand-header">Arki Water</div>
+    <div class="brand-header">Care Water</div>
     <div class="variant"><div class="variant-info"><div class="variant-size">0.3 L/pack</div><div class="variant-price">140 Birr</div></div><button class="add-btn" onclick="addToCart('Arki Water', '0.3L', 140)">+</button></div>
     <div class="variant"><div class="variant-info"><div class="variant-size">0.6 L/pack</div><div class="variant-price">150 Birr</div></div><button class="add-btn" onclick="addToCart('Arki Water', '0.6L', 150)">+</button></div>
     <div class="variant"><div class="variant-info"><div class="variant-size">2 L/pack</div><div class="variant-price">160 Birr</div></div><button class="add-btn" onclick="addToCart('Arki Water', '2L', 160)">+</button></div>
@@ -481,6 +484,57 @@
     </div>
   </div>
 
+  </div>
+    <div id="wow-section" class="brand-section">
+    <div class="brand-header">Wow Water</div>
+    <div class="variant"><div class="variant-info"><div class="variant-size">0.3 L/pack</div><div class="variant-price">140 Birr</div></div><button class="add-btn" onclick="addToCart('Arki Water', '0.3L', 140)">+</button></div>
+    <div class="variant"><div class="variant-info"><div class="variant-size">0.6 L/pack</div><div class="variant-price">150 Birr</div></div><button class="add-btn" onclick="addToCart('Arki Water', '0.6L', 150)">+</button></div>
+    <div class="variant"><div class="variant-info"><div class="variant-size">2 L/pack</div><div class="variant-price">160 Birr</div></div><button class="add-btn" onclick="addToCart('Arki Water', '2L', 160)">+</button></div>
+    <div class="nutrition">
+      <h3>Nutrition Facts (per liter)</h3>
+      <table class="nutrition-table">
+        <tr><td>Calcium</td><td>0.4 mg/L</td></tr>
+        <tr><td>Magnesium</td><td>1.3 mg/L</td></tr>
+        <tr><td>Sodium</td><td>2.3 mg/L</td></tr>
+        <tr><td>TDS</td><td>20 mg/L</td></tr>
+      </table>
+    </div>
+  </div>
+
+  </div>
+    <div id="konjo-section" class="brand-section">
+    <div class="brand-header">Konjoo Water</div>
+    <div class="variant"><div class="variant-info"><div class="variant-size">0.3 L/pack</div><div class="variant-price">140 Birr</div></div><button class="add-btn" onclick="addToCart('Arki Water', '0.3L', 140)">+</button></div>
+    <div class="variant"><div class="variant-info"><div class="variant-size">0.6 L/pack</div><div class="variant-price">150 Birr</div></div><button class="add-btn" onclick="addToCart('Arki Water', '0.6L', 150)">+</button></div>
+    <div class="variant"><div class="variant-info"><div class="variant-size">2 L/pack</div><div class="variant-price">160 Birr</div></div><button class="add-btn" onclick="addToCart('Arki Water', '2L', 160)">+</button></div>
+    <div class="nutrition">
+      <h3>Nutrition Facts (per liter)</h3>
+      <table class="nutrition-table">
+        <tr><td>Calcium</td><td>0.4 mg/L</td></tr>
+        <tr><td>Magnesium</td><td>1.3 mg/L</td></tr>
+        <tr><td>Sodium</td><td>2.3 mg/L</td></tr>
+        <tr><td>TDS</td><td>20 mg/L</td></tr>
+      </table>
+    </div>
+  </div>
+
+  </div>
+    <div id="eden-section" class="brand-section">
+    <div class="brand-header">Eden Water</div>
+    <div class="variant"><div class="variant-info"><div class="variant-size">0.3 L/pack</div><div class="variant-price">140 Birr</div></div><button class="add-btn" onclick="addToCart('Arki Water', '0.3L', 140)">+</button></div>
+    <div class="variant"><div class="variant-info"><div class="variant-size">0.6 L/pack</div><div class="variant-price">150 Birr</div></div><button class="add-btn" onclick="addToCart('Arki Water', '0.6L', 150)">+</button></div>
+    <div class="variant"><div class="variant-info"><div class="variant-size">2 L/pack</div><div class="variant-price">160 Birr</div></div><button class="add-btn" onclick="addToCart('Arki Water', '2L', 160)">+</button></div>
+    <div class="nutrition">
+      <h3>Nutrition Facts (per liter)</h3>
+      <table class="nutrition-table">
+        <tr><td>Calcium</td><td>0.4 mg/L</td></tr>
+        <tr><td>Magnesium</td><td>1.3 mg/L</td></tr>
+        <tr><td>Sodium</td><td>2.3 mg/L</td></tr>
+        <tr><td>TDS</td><td>20 mg/L</td></tr>
+      </table>
+    </div>
+  </div>
+  
   <!-- Cart -->
   <div id="cart-summary">
     <div class="cart-header" style="display:flex; justify-content:space-between; align-items:center; margin-bottom:12px;">
