--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
     <div class="category-tile" onclick="showBrand('top')"><img src="https://i.postimg.cc/4dGs4htb/top.webp" alt="Top water"><span>Top water</span></div>
     <div class="category-tile" onclick="showBrand('daily')"><img src="https://i.postimg.cc/TYMSzXV0/kiya.webp" alt="Kiya water"><span>Kiya water</span></div>
     <div class="category-tile" onclick="showBrand('fine')"><img src="https://i.postimg.cc/9McHHHH5/sport.webp" alt="Sport water"><span>Sport water</span></div>
-    <div class="category-tile" onclick="showBrand('gold')"><img src="https://i.postimg.cc/xTXcXRGR/gold-water-image.webp" alt="Gold"><span>Gold Water</span></div>
+    <div class="category-tile" onclick="showBrand('gold')"><img src="https://i.postimg.cc/nr7cPzVK/gold-w.webp" alt="Gold"><span>Gold Water</span></div>
     <div class="category-tile" onclick="showBrand('one')"><img src="https://i.postimg.cc/Vvf49NBk/one-water.jpg" alt="One"><span>One Water</span></div>
     <div class="category-tile" onclick="showBrand('africa')"><img src="https://i.postimg.cc/0NGB7hR3/africa.jpg" alt="Africa"><span>Africa Water</span></div>
     <div class="category-tile" onclick="showBrand('yes')"><img src="https://i.postimg.cc/rw1JHWnJ/yes.webp" alt="Yes"><span>Yes Water</span></div>
@@ -267,9 +267,9 @@
     <div class="category-tile" onclick="showBrand('fham')"><img src="https://i.postimg.cc/wjqVSMCp/fham.jpg" alt="Fham"><span>Fham Water</span></div>
     <div class="category-tile" onclick="showBrand('arki')"><img src="https://i.postimg.cc/TwDqrDDf/arki.webp" alt="Arki"><span>Arki Water</span></div>
     <div class="category-tile" onclick="showBrand('care')"><img src="https://i.postimg.cc/15NtYv7K/care.webp" alt="Care"><span>Care Water</span></div>
-    <div class="category-tile" onclick="showBrand('wow')"><img src="https://i.postimg.cc/15NtYv7K/care.webp" alt="Wow"><span>Wow Water</span></div>
-    <div class="category-tile" onclick="showBrand('konjo')"><img src="https://i.postimg.cc/15NtYv7K/care.webp" alt="Konjo"><span>Konjo Water</span></div>
-    <div class="category-tile" onclick="showBrand('eden')"><img src="https://i.postimg.cc/15NtYv7K/care.webp" alt="Eden"><span>Eden Water</span></div>
+    <div class="category-tile" onclick="showBrand('wow')"><img src="https://i.postimg.cc/Gh1fD2DQ/wow.webp" alt="Wow"><span>Wow Water</span></div>
+    <div class="category-tile" onclick="showBrand('konjo')"><img src="https://i.postimg.cc/gkYDd68Y/konjo.jpg" alt="Konjo"><span>Konjo Water</span></div>
+    <div class="category-tile" onclick="showBrand('eden')"><img src="https://i.postimg.cc/xCnkHL01/eden.webp" alt="Eden"><span>Eden Water</span></div>
   </div>
 
   <div id="no-results">No brands found matching your search </div>
@@ -534,7 +534,7 @@
       </table>
     </div>
   </div>
-  
+
   <!-- Cart -->
   <div id="cart-summary">
     <div class="cart-header" style="display:flex; justify-content:space-between; align-items:center; margin-bottom:12px;">
