--- a/index.html
+++ b/index.html
@@ -255,11 +255,11 @@
 
   <div class="categories">
     <div class="category-tile" onclick="showBrand('aquaddis')"><img src="https://i.postimg.cc/dVD0gdmt/aquaddis.webp" alt="Aquaddis"><span>Aquaddis</span></div>
-    <div class="category-tile" onclick="showBrand('best')"><img src="https://i.postimg.cc/bYFW3tJV/forest.webp" alt="Forest water"><span>Forest water</span></div>
-    <div class="category-tile" onclick="showBrand('top')"><img src="https://i.postimg.cc/4dGs4htb/top.webp" alt="Top water"><span>Top water</span></div>
-    <div class="category-tile" onclick="showBrand('daily')"><img src="https://i.postimg.cc/TYMSzXV0/kiya.webp" alt="Kiya water"><span>Kiya water</span></div>
-    <div class="category-tile" onclick="showBrand('fine')"><img src="https://i.postimg.cc/9McHHHH5/sport.webp" alt="Sport water"><span>Sport water</span></div>
     <div class="category-tile" onclick="showBrand('gold')"><img src="https://i.postimg.cc/nr7cPzVK/gold-w.webp" alt="Gold"><span>Gold Water</span></div>
+    <div class="category-tile" onclick="showBrand('top')"><img src="https://i.postimg.cc/4dGs4htb/top.webp" alt="Top water"><span>Top water</span></div>
+    <div class="category-tile" onclick="showBrand('kiya')"><img src="https://i.postimg.cc/TYMSzXV0/kiya.webp" alt="Kiya water"><span>Kiya water</span></div>
+    <div class="category-tile" onclick="showBrand('fine')"><img src="https://i.postimg.cc/9McHHHH5/sport.webp" alt="Sport water"><span>Sport water</span></div>
+    <div class="category-tile" onclick="showBrand('forest')"><img src="https://i.postimg.cc/bYFW3tJV/forest.webp" alt="Forest water"><span>Forest water</span></div>
     <div class="category-tile" onclick="showBrand('one')"><img src="https://i.postimg.cc/Vvf49NBk/one-water.jpg" alt="One"><span>One Water</span></div>
     <div class="category-tile" onclick="showBrand('africa')"><img src="https://i.postimg.cc/0NGB7hR3/africa.jpg" alt="Africa"><span>Africa Water</span></div>
     <div class="category-tile" onclick="showBrand('yes')"><img src="https://i.postimg.cc/rw1JHWnJ/yes.webp" alt="Yes"><span>Yes Water</span></div>
@@ -291,8 +291,8 @@
     </div>
   </div>
 
-  <div id="best-section" class="brand-section">
-    <div class="brand-header">Forest Water</div>
+  <div id="gold-section" class="brand-section">
+    <div class="brand-header">Gold Water</div>
     <div class="variant"><div class="variant-info"><div class="variant-size">0.3 L/pack</div><div class="variant-price">140 Birr</div></div><button class="add-btn" onclick="addToCart('Best Water', '0.3L', 140)">+</button></div>
     <div class="variant"><div class="variant-info"><div class="variant-size">0.6 L/pack</div><div class="variant-price">150 Birr</div></div><button class="add-btn" onclick="addToCart('Best Water', '0.6L', 150)">+</button></div>
     <div class="variant"><div class="variant-info"><div class="variant-size">2 L/pack</div><div class="variant-price">160 Birr</div></div><button class="add-btn" onclick="addToCart('Best Water', '2L', 160)">+</button></div>
@@ -323,7 +323,7 @@
     </div>
   </div>
 
-  <div id="daily-section" class="brand-section">
+  <div id="kiya-section" class="brand-section">
     <div class="brand-header">Kiya Water</div>
     <div class="variant"><div class="variant-info"><div class="variant-size">0.3 L/pack</div><div class="variant-price">140 Birr</div></div><button class="add-btn" onclick="addToCart('Daily Water', '0.3L', 140)">+</button></div>
     <div class="variant"><div class="variant-info"><div class="variant-size">0.6 L/pack</div><div class="variant-price">150 Birr</div></div><button class="add-btn" onclick="addToCart('Daily Water', '0.6L', 150)">+</button></div>
@@ -355,8 +355,8 @@
     </div>
   </div>
 
-  <div id="gold-section" class="brand-section">
-    <div class="brand-header">Gold Water</div>
+  <div id="forest-section" class="brand-section">
+    <div class="brand-header">Forest Water</div>
     <div class="variant"><div class="variant-info"><div class="variant-size">0.3 L/pack</div><div class="variant-price">140 Birr</div></div><button class="add-btn" onclick="addToCart('Gold Water', '0.3L', 140)">+</button></div>
     <div class="variant"><div class="variant-info"><div class="variant-size">0.6 L/pack</div><div class="variant-price">150 Birr</div></div><button class="add-btn" onclick="addToCart('Gold Water', '0.6L', 150)">+</button></div>
     <div class="variant"><div class="variant-info"><div class="variant-size">2 L/pack</div><div class="variant-price">160 Birr</div></div><button class="add-btn" onclick="addToCart('Gold Water', '2L', 160)">+</button></div>
