--- a/index.html
+++ b/index.html
@@ -257,15 +257,15 @@
     <div class="category-tile" onclick="showBrand('aquaddis')"><img src="https://i.postimg.cc/dVD0gdmt/aquaddis.webp" alt="Aquaddis"><span>Aquaddis</span></div>
     <div class="category-tile" onclick="showBrand('gold')"><img src="https://i.postimg.cc/nr7cPzVK/gold-w.webp" alt="Gold"><span>Gold Water</span></div>
     <div class="category-tile" onclick="showBrand('top')"><img src="https://i.postimg.cc/4dGs4htb/top.webp" alt="Top water"><span>Top water</span></div>
-    <div class="category-tile" onclick="showBrand('kiya')"><img src="https://i.postimg.cc/TYMSzXV0/kiya.webp" alt="Kiya water"><span>Kiya water</span></div>
-    <div class="category-tile" onclick="showBrand('fine')"><img src="https://i.postimg.cc/9McHHHH5/sport.webp" alt="Sport water"><span>Sport water</span></div>
-    <div class="category-tile" onclick="showBrand('forest')"><img src="https://i.postimg.cc/bYFW3tJV/forest.webp" alt="Forest water"><span>Forest water</span></div>
     <div class="category-tile" onclick="showBrand('one')"><img src="https://i.postimg.cc/Vvf49NBk/one-water.jpg" alt="One"><span>One Water</span></div>
     <div class="category-tile" onclick="showBrand('africa')"><img src="https://i.postimg.cc/0NGB7hR3/africa.jpg" alt="Africa"><span>Africa Water</span></div>
     <div class="category-tile" onclick="showBrand('yes')"><img src="https://i.postimg.cc/rw1JHWnJ/yes.webp" alt="Yes"><span>Yes Water</span></div>
     <div class="category-tile" onclick="showBrand('dega')"><img src="https://i.postimg.cc/9FG86vz9/dega.webp" alt="Dega"><span>Dega Water</span></div>
-    <div class="category-tile" onclick="showBrand('fham')"><img src="https://i.postimg.cc/wjqVSMCp/fham.jpg" alt="Fham"><span>Fham Water</span></div>
     <div class="category-tile" onclick="showBrand('arki')"><img src="https://i.postimg.cc/TwDqrDDf/arki.webp" alt="Arki"><span>Arki Water</span></div>
+    <div class="category-tile" onclick="showBrand('forest')"><img src="https://i.postimg.cc/bYFW3tJV/forest.webp" alt="Forest water"><span>Forest water</span></div>
+    <div class="category-tile" onclick="showBrand('kiya')"><img src="https://i.postimg.cc/TYMSzXV0/kiya.webp" alt="Kiya water"><span>Kiya water</span></div>
+    <div class="category-tile" onclick="showBrand('sport')"><img src="https://i.postimg.cc/9McHHHH5/sport.webp" alt="Sport water"><span>Sport water</span></div>
+    <div class="category-tile" onclick="showBrand('fham')"><img src="https://i.postimg.cc/wjqVSMCp/fham.jpg" alt="Fham"><span>Fham Water</span></div>
     <div class="category-tile" onclick="showBrand('care')"><img src="https://i.postimg.cc/15NtYv7K/care.webp" alt="Care"><span>Care Water</span></div>
     <div class="category-tile" onclick="showBrand('wow')"><img src="https://i.postimg.cc/Gh1fD2DQ/wow.webp" alt="Wow"><span>Wow Water</span></div>
     <div class="category-tile" onclick="showBrand('konjo')"><img src="https://i.postimg.cc/gkYDd68Y/konjo.jpg" alt="Konjo"><span>Konjo Water</span></div>
@@ -323,8 +323,8 @@
     </div>
   </div>
 
-  <div id="kiya-section" class="brand-section">
-    <div class="brand-header">Kiya Water</div>
+  <div id="one-section" class="brand-section">
+    <div class="brand-header">One Water</div>
     <div class="variant"><div class="variant-info"><div class="variant-size">0.3 L/pack</div><div class="variant-price">140 Birr</div></div><button class="add-btn" onclick="addToCart('Daily Water', '0.3L', 140)">+</button></div>
     <div class="variant"><div class="variant-info"><div class="variant-size">0.6 L/pack</div><div class="variant-price">150 Birr</div></div><button class="add-btn" onclick="addToCart('Daily Water', '0.6L', 150)">+</button></div>
     <div class="variant"><div class="variant-info"><div class="variant-size">2 L/pack</div><div class="variant-price">160 Birr</div></div><button class="add-btn" onclick="addToCart('Daily Water', '2L', 160)">+</button></div>
@@ -339,8 +339,8 @@
     </div>
   </div>
 
-  <div id="fine-section" class="brand-section">
-    <div class="brand-header">Sport Water</div>
+  <div id="africa-section" class="brand-section">
+    <div class="brand-header">Africa Water</div>
     <div class="variant"><div class="variant-info"><div class="variant-size">0.3 L/pack</div><div class="variant-price">140 Birr</div></div><button class="add-btn" onclick="addToCart('Fine Water', '0.3L', 140)">+</button></div>
     <div class="variant"><div class="variant-info"><div class="variant-size">0.6 L/pack</div><div class="variant-price">150 Birr</div></div><button class="add-btn" onclick="addToCart('Fine Water', '0.6L', 150)">+</button></div>
     <div class="variant"><div class="variant-info"><div class="variant-size">2 L/pack</div><div class="variant-price">160 Birr</div></div><button class="add-btn" onclick="addToCart('Fine Water', '2L', 160)">+</button></div>
@@ -355,8 +355,8 @@
     </div>
   </div>
 
-  <div id="forest-section" class="brand-section">
-    <div class="brand-header">Forest Water</div>
+  <div id="yes-section" class="brand-section">
+    <div class="brand-header">Yes Water</div>
     <div class="variant"><div class="variant-info"><div class="variant-size">0.3 L/pack</div><div class="variant-price">140 Birr</div></div><button class="add-btn" onclick="addToCart('Gold Water', '0.3L', 140)">+</button></div>
     <div class="variant"><div class="variant-info"><div class="variant-size">0.6 L/pack</div><div class="variant-price">150 Birr</div></div><button class="add-btn" onclick="addToCart('Gold Water', '0.6L', 150)">+</button></div>
     <div class="variant"><div class="variant-info"><div class="variant-size">2 L/pack</div><div class="variant-price">160 Birr</div></div><button class="add-btn" onclick="addToCart('Gold Water', '2L', 160)">+</button></div>
@@ -371,8 +371,8 @@
     </div>
   </div>
 
-  <div id="one-section" class="brand-section">
-    <div class="brand-header">One Water</div>
+  <div id="dega-section" class="brand-section">
+    <div class="brand-header">Dega Water</div>
     <div class="variant"><div class="variant-info"><div class="variant-size">0.3 L/pack</div><div class="variant-price">140 Birr</div></div><button class="add-btn" onclick="addToCart('One Water', '0.3L', 140)">+</button></div>
     <div class="variant"><div class="variant-info"><div class="variant-size">0.6 L/pack</div><div class="variant-price">150 Birr</div></div><button class="add-btn" onclick="addToCart('One Water', '0.6L', 150)">+</button></div>
     <div class="variant"><div class="variant-info"><div class="variant-size">2 L/pack</div><div class="variant-price">160 Birr</div></div><button class="add-btn" onclick="addToCart('One Water', '2L', 160)">+</button></div>
@@ -387,8 +387,8 @@
     </div>
   </div>
 
-  <div id="africa-section" class="brand-section">
-    <div class="brand-header">Africa Water</div>
+  <div id="arki-section" class="brand-section">
+    <div class="brand-header">Arki Water</div>
     <div class="variant"><div class="variant-info"><div class="variant-size">0.3 L/pack</div><div class="variant-price">140 Birr</div></div><button class="add-btn" onclick="addToCart('Africa Water', '0.3L', 140)">+</button></div>
     <div class="variant"><div class="variant-info"><div class="variant-size">0.6 L/pack</div><div class="variant-price">150 Birr</div></div><button class="add-btn" onclick="addToCart('Africa Water', '0.6L', 150)">+</button></div>
     <div class="variant"><div class="variant-info"><div class="variant-size">2 L/pack</div><div class="variant-price">160 Birr</div></div><button class="add-btn" onclick="addToCart('Africa Water', '2L', 160)">+</button></div>
@@ -403,8 +403,8 @@
     </div>
   </div>
 
-  <div id="yes-section" class="brand-section">
-    <div class="brand-header">Yes Water</div>
+  <div id="forest-section" class="brand-section">
+    <div class="brand-header">Forest Water</div>
     <div class="variant"><div class="variant-info"><div class="variant-size">0.3 L/pack</div><div class="variant-price">140 Birr</div></div><button class="add-btn" onclick="addToCart('Yes Water', '0.3L', 140)">+</button></div>
     <div class="variant"><div class="variant-info"><div class="variant-size">0.6 L/pack</div><div class="variant-price">150 Birr</div></div><button class="add-btn" onclick="addToCart('Yes Water', '0.6L', 150)">+</button></div>
     <div class="variant"><div class="variant-info"><div class="variant-size">2 L/pack</div><div class="variant-price">160 Birr</div></div><button class="add-btn" onclick="addToCart('Yes Water', '2L', 160)">+</button></div>
@@ -419,8 +419,8 @@
     </div>
   </div>
 
-  <div id="dega-section" class="brand-section">
-    <div class="brand-header">Dega Water</div>
+  <div id="kiya-section" class="brand-section">
+    <div class="brand-header">Kiya Water</div>
     <div class="variant"><div class="variant-info"><div class="variant-size">0.3 L/pack</div><div class="variant-price">140 Birr</div></div><button class="add-btn" onclick="addToCart('Dega Water', '0.3L', 140)">+</button></div>
     <div class="variant"><div class="variant-info"><div class="variant-size">0.6 L/pack</div><div class="variant-price">150 Birr</div></div><button class="add-btn" onclick="addToCart('Dega Water', '0.6L', 150)">+</button></div>
     <div class="variant"><div class="variant-info"><div class="variant-size">2 L/pack</div><div class="variant-price">160 Birr</div></div><button class="add-btn" onclick="addToCart('Dega Water', '2L', 160)">+</button></div>
@@ -435,8 +435,8 @@
     </div>
   </div>
 
-  <div id="fham-section" class="brand-section">
-    <div class="brand-header">Fham Water</div>
+  <div id="sport-section" class="brand-section">
+    <div class="brand-header">Sport Water</div>
     <div class="variant"><div class="variant-info"><div class="variant-size">0.3 L/pack</div><div class="variant-price">140 Birr</div></div><button class="add-btn" onclick="addToCart('Fham Water', '0.3L', 140)">+</button></div>
     <div class="variant"><div class="variant-info"><div class="variant-size">0.6 L/pack</div><div class="variant-price">150 Birr</div></div><button class="add-btn" onclick="addToCart('Fham Water', '0.6L', 150)">+</button></div>
     <div class="variant"><div class="variant-info"><div class="variant-size">2 L/pack</div><div class="variant-price">160 Birr</div></div><button class="add-btn" onclick="addToCart('Fham Water', '2L', 160)">+</button></div>
@@ -451,8 +451,8 @@
     </div>
   </div>
 
-  <div id="arki-section" class="brand-section">
-    <div class="brand-header">Arki Water</div>
+  <div id="fham-section" class="brand-section">
+    <div class="brand-header">Fham Water</div>
     <div class="variant"><div class="variant-info"><div class="variant-size">0.3 L/pack</div><div class="variant-price">140 Birr</div></div><button class="add-btn" onclick="addToCart('Arki Water', '0.3L', 140)">+</button></div>
     <div class="variant"><div class="variant-info"><div class="variant-size">0.6 L/pack</div><div class="variant-price">150 Birr</div></div><button class="add-btn" onclick="addToCart('Arki Water', '0.6L', 150)">+</button></div>
     <div class="variant"><div class="variant-info"><div class="variant-size">2 L/pack</div><div class="variant-price">160 Birr</div></div><button class="add-btn" onclick="addToCart('Arki Water', '2L', 160)">+</button></div>
