--- a/index.html
+++ b/index.html
@@ -538,13 +538,20 @@
   <!-- Cart -->
   <div id="cart-summary">
     <div class="cart-header" style="display:flex; justify-content:space-between; align-items:center; margin-bottom:12px;">
-      <h2>Your Cart</h2>
+      <div style="display:flex; align-items:center; gap:12px;">
+        <button 
+        id="cart-back-btn"
+        style="background:none; border:none; font-size:24px; color:var(--text); cursor:pointer; padding:4px 8px;"
+        onclick="hideCart()"
+        >←</button>
+        <h2 style="margin:0;">Your Cart</h2>
+      </div>
       <span id="cart-count" class="cart-count">0</span>
-    </div>
-    <ul id="cart-items"></ul>
-    <div id="total">Total: 0 Birr</div>
-    <div id="empty">Cart is empty – choose a brand! 💧</div>
   </div>
+  <ul id="cart-items"></ul>
+  <div id="total">Total: 0 Birr</div>
+  <div id="empty">Cart is empty – choose a brand! 💧</div>
+</div>
 
   <script>
     const tg = window.Telegram.WebApp;
