--- a/index.html
+++ b/index.html
@@ -292,17 +292,18 @@
   </div>
 
   <div id="gold-section" class="brand-section">
-    <div class="brand-header">Gold Water</div>
+    <div class="brand-header">Gold Water-For Golden life</div>
     <div class="variant"><div class="variant-info"><div class="variant-size">0.3 L/pack</div><div class="variant-price">140 Birr</div></div><button class="add-btn" onclick="addToCart('Best Water', '0.3L', 140)">+</button></div>
     <div class="variant"><div class="variant-info"><div class="variant-size">0.6 L/pack</div><div class="variant-price">150 Birr</div></div><button class="add-btn" onclick="addToCart('Best Water', '0.6L', 150)">+</button></div>
     <div class="variant"><div class="variant-info"><div class="variant-size">2 L/pack</div><div class="variant-price">160 Birr</div></div><button class="add-btn" onclick="addToCart('Best Water', '2L', 160)">+</button></div>
     <div class="nutrition">
       <h3>Nutrition Facts (per liter)</h3>
       <table class="nutrition-table">
-        <tr><td>Calcium</td><td>0.4 mg/L</td></tr>
-        <tr><td>Magnesium</td><td>1.3 mg/L</td></tr>
-        <tr><td>Sodium</td><td>2.3 mg/L</td></tr>
-        <tr><td>TDS</td><td>20 mg/L</td></tr>
+        <tr><td>TDS</td><td>8.5 mg/L</td></tr>
+        <tr><td>Calcium</td><td>1.6 mg/L</td></tr>
+        <tr><td>Magnesium</td><td>0.8 mg/L</td></tr>
+        <tr><td>potassium</td><td>8.5 mg/L</td></tr>
+        <tr><td>Sodium</td><td>0.9 mg/L</td></tr>
       </table>
     </div>
   </div>
